--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,8 @@ code {
 .Title {
   position: absolute;
   left: 3.26%;
+  padding: 0%;
+  margin: 0%;
 
   font-family: 'Montserrat';
   font-style: normal;
@@ -26,16 +28,6 @@ code {
   line-height: 78px;
 
   color: #739CFA;
-}
-
-.sub {
-  position: absolute;
-
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 64px;
-  line-height: 78px;
 }
 
 .BLeft {
@@ -59,3 +51,23 @@ code {
   width: 300px;
 }
 
+.mainLink {
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 78px;
+}
+
+.text_bcg {
+  width: 500px;
+  height: 50px;
+  position: absolute;
+  top: 100px;
+  left: 20px;
+}
