--- a/src/match.css
+++ b/src/match.css
@@ -1,3 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;600&display=swap");
+
 .Content {
+    height: 100vh;
     padding: 0 150px;
+    display: flex;
+    flex-flow: column;
+}
+
+.LightFont {
+    color: #ffffff;
+    font-family: "Outfit", sans-serif;
+    font-style: light;
+    font-weight: 300;
+    font-size: 30px;
 }
