--- a/src/match.css
+++ b/src/match.css
@@ -12,5 +12,5 @@
     font-family: "Outfit", sans-serif;
     font-style: light;
     font-weight: 300;
-    font-size: 30px;
+    font-size: 2.7vw;
 }
