--- a/src/index.css
+++ b/src/index.css
@@ -1,66 +1,65 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: #F5F5F5;;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: #f5f5f5;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
 }
 
 .Title {
-  position: absolute;
-  left: 3.26%;
-  padding: 0%;
-  margin: 0%;
+    position: absolute;
+    left: 3.26%;
+    padding: 0%;
+    margin: 0%;
 
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 64px;
-  line-height: 78px;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 78px;
 
-  color: #739CFA;
+    color: #739cfa;
 }
 
 .BLeft {
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  width: 450px;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 450px;
 }
 
 .BRight {
-  position: absolute;
-  right: 0px;
-  bottom: 0px;
-  width: 200px;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    width: 200px;
 }
 
 .TRight {
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  width: 300px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    width: 300px;
 }
 
 .mainLink {
-  height: 80vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 78px;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 78px;
 }
-
