--- a/src/match.css
+++ b/src/match.css
@@ -14,3 +14,9 @@
     font-weight: 300;
     font-size: 2.7vw;
 }
+
+.SemiBoldFont {
+    font-family: "Outfit", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+}
