--- a/src/match.css
+++ b/src/match.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
 
 .Content {
     height: 100vh;
-    padding: 0 150px;
+    padding: 0 50px;
     display: flex;
     flex-flow: column;
 }
